<resources>
    <string name="app_name">Rules</string>
    <string name="traffic_rules">Traffic rules</string>
    <string name="driving_rules">Driving Rules</string>
    <string name="traffic_signs">Traffic signs</string>
    <string name="penalities">Penalities</string>
    <string name="traffic">traffic_rules</string>
    <string name="string_traffic">Traffic rules</string>
    <string name="button5">Warning signs</string>
    <string name="Button6">Temporary and other signs</string>
    <string name="Button7">informatory signs</string>
    <string name="Button8">warning signs</string>
    <string name="Button9">prohibitory signs</string>
    <string name="Button10">obligatory signs</string>
    <string name="really_long">
        Every now and then, we come across new vehicles on the road.
        Hence, it is vital to know and to follow the basic road safety rules and to ensure that everyone
        else follow these rules too. The road safety rules are designed to suit the best interest
        of the Indian citizens. In a huge country like India, it may be difficult to execute
        these safety rules; but, it is not impossible.

        Here are 30 essential road safety rulesto be followed in India:
        Must Read:   5 Must-know Unwritten Road Safety Rules on Indian RoadsRoad Safety Rules
        for Children (7 to 11 Years Old)
        1. Keep Left  Drive adjacent to the left side of the road and let other vehicles in
        the opposite direction to pass on the right hand side.
        2.  Turning Left  If you want to turn left, stay close to the left side and then, turn left.
        After turning, continue to stay to the left side of the road.
        3.  Turning Right  When you want to turn right, you should first come to the centre
        of the road carefully and then, turn right keeping your vehicle close to the left side
        of the road.
        4.   Passing  Always remember to pass or overtake the vehicle in front of yours from its right side.
        5.  Passing Prohibited  Overtaking or passing a vehicle and progress in the same direction
        is prohibited in the following cases:
        •\tIf overtaking or passing causes trouble to any other vehicle moving in any direction
        •\tOvertaking is prohibited in a curve as you may not have a clear view of the road ahea
        d and sometimes, it may lead to serious accidents
        •\tIt is not wise to overtake or pass if you see the other vehicle\'s driver already
        starting to overtake your vehicle
        •\tIf the other driver does not give a signal allowing your vehicle to overtake their vehicle
        6.  When another Vehicle Overtakes your Vehicle  You should not try to increase your speed
        or do anything that prevents the other vehicle from passing or overtaking.
        7.  Intersections  You should be extra cautious while approaching a junction,
        intersections or a crossing. Make sure that your vehicle does not cause any inconvenience
        to other vehicles or pedestrians.
        8.   Right of Way  While approaching an intersection, always give a right of way to
        vehicles already progressing on that particular road. In other cases, you should proceed
        only after giving way to vehicles approaching from the right side of the road..
        9.  Emergency Vehicles  As a road user, it is your responsibility to give way to fire service
        vehicles and ambulances.
        10.  Pedestrians  Pedestrians have the right of way at pedestrian crossings or zebra crossings.
        Read Also:   Teach Road Safety Rules to Kids with These Interesting Activities
        11.  “U” Turns  U turns can only be taken when
        •\tthere is no warning sign nearby
        •\tyou give a proper indication to other vehicle drivers that you are going to take
        a U turn either by hand signals or vehicle indicators
        •\tyou confirm through the mirrors that there is no traffic behind your vehicle
        •\tthere is no traffic around your vehicle and take U turn only when it is safe
        12.  Required Signals   If your vehicle indicators get damaged without any warning,
        what will you do? At this juncture, hand signals can be really helpful and hence,
        it is essential for you to learn them. Here are certain situations where hand signs can be
        used when your vehicle indicator or brakes are not in proper working condition:
        •\tWhen your vehicle is slowing down  •\tWhen your vehicle is preparing to stop
        •\tWhen you are planning to turn right or overtake a vehicle from the right side
        •\tWhen you plan to turn left  •\tWhen you give permission to the vehicle behind you
        to overtake your vehicle
        13.  Indicators  By using mechanical devices or electronic devices, you can simplify
        the signals for indication.
        14.  Parking  When you park the vehicle, make sure that it does not cause any hurdle or
        disturbance to any other road users.
        15.  Registration  No goods or loads should be kept in a way that hinders the visibility
        of other vehicles, the headlamps, tail lamps or the vehicle\'s registration number.
        If the vehicle\'s registration number is some way tampered, it should be replaced immediately
        with a duplicate one.
        16.  One way Roads  In the case of one way roads, try to drive onlyin the direction indicated
        on the road signs. Never park your vehicle in reverse on a one way street.
        17.  Stop Lines  When there are stop lines on the road, ensure that you stop the vehicle
        behind those lines.
        18. Towing  No vehicles should be towed closer to other vehicles on the road. Some of
        the exceptions are:
        •\tVehicles that are mechanically disabled
        •\tPartially assembled vehicles
        •\tRegistered trailers and sidecars  All these vehicles are allowed to tow for the purpose
        of delivery, reaching the nearest service station, or garage.
        19. Noise  Drivers should not:
        •\tUse the horn needlessly
        •\tUse the horn in prohibited areas like hospital zones, school zones, etc.
        •\tUse horns that are blaring, irritating, or loud  •\tUse vehicles that cause a lot of
        noise when in motion
        •\tDrive vehicles without proper silencers
        20.  Traffic Lights and Signs  Always obey traffic signs, the instructions given by traffic
        officials or any other authorized person.
        You May Also Like:  10 Important Road Safety Rules to Teach Your Children
        21.  Following Distance  It is better to keep a safe distance from the vehicle in front
        of you since there is a chance for the vehicle to stop suddenly. When you keep sufficient
        distance, you will be able to avoid unnecessary hazards.
        22.  Right of way on Steep Roads  When the width of the road decreases, it will be difficult
        for each vehicle to pass at the same time. In such cases, it is always better to stop your
        vehicle aside and let the other vehicle pass.
        23.  Obstruction of Control  You should not allow anything that obstructs the view of
        the road. No one should be permitted to settle, stand, or place anything that hinders his
        control on the vehicle.
        24.  Passing Pedestrians  Do not drive your vehicle at a speed of more than 25 km/hr,
        especially when you pass a procession, meeting, strike, or a march.
        25. Tractor and Goods Carriages  It is not allowed to carry passengers on a tractor.
        Also, drivers of good carriages should not allow more passengers than registered.
        26. Loading  It is dangerous to overload vehicle with materials. There should not be anything
        in the loads that extend towards the front, back or rear side of the vehicle that cause
        inconvenience to other road users. Also, it should follow the height restrictions decided
        by the authorities.
        27. Dangerous Materials   It is better for a public transport service to not carry explosive,
        inflammable, or harmful substances as it can be dangerous to them as well as other road users.
        28.  Driving in Reverse  When you take reverse, you should ensure that it does not cause
        annoyance to any other people on the road.  29. Essential Documents  A driver should possess
        the following documents while driving a vehicle: –
        a.  Driving license
        b.  Registration certificate of the vehicle
        c.  Taxation certificate
        d.  Insurance certificate
        e.  Fitness certificate
        f.  Permit
        All the above documents should be produced on the demand of a police officer or any authorized
        person. If the documents are not with them, either the attested copies should be given to the
        officer directly or sent by post within 15 days.
        30.  Additional Regulations  In addition to the rules mentioned above, the drivers should
        be aware about their duties, speed limits, weight limits, signals, etc. Also, they should
        have an idea about the consequences of driving vehicles without relevant documents, drunken
        driving etc.  The above mentioned rules can be very much valuable for people of all ages.
        These rules can make the people safe and secure on the roads. Every year, the number of
        vehicles on road goes on increasing; so does the importance of road safety. Hence, knowing
        essential road safety rules can help you and your friends from road related crisis.
    </string>
    <string name="textview1">Every now and then, we come across new vehicles on the road.         Hence, it is vital to know and to follow the basic road safety rules and to ensure that everyone         else follow these rules too. The road safety rules are designed to suit the best interest         of the Indian citizens. In a huge country like India, it may be difficult to execute         these safety rules; but, it is not impossible.</string>
    <string name="textview2">Here are 30 essential road safety rulesto be followed in India:          Must Read:   5 Must-know Unwritten Road Safety Rules on Indian RoadsRoad Safety Rules          for Children (7 to 11 Years Old)</string>
    <string name="textview3">1. Keep Left  Drive adjacent to the left side of the road and let other vehicles in         the opposite direction to pass on the right hand side.</string>
    <string name="textview4">2.  Turning Left  If you want to turn left, stay close to the left side and then, turn left.         After turning, continue to stay to the left side of the road.</string>
    <string name="obligatory_signs">obligatory signs</string>


</resources>

